# ptp-unregistered-cleaner

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml
src/ptp_unregistered_cleaner/: __init__.py  __main__.py  app.py  config.py  logging_config.py  matcher.py  ptp_client.py  qbittorrent_client.py  state.py
tests/: test_config.py  test_matcher.py  test_ptp_client.py  test_state.py
