[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptp-unregistered-cleaner"
version = "0.1.0"
description = "Remove PassThePopcorn unregistered torrents from qBittorrent without deleting files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ptp-unregistered-cleaner contributors" }]
dependencies = [
  "httpx>=0.27,<1",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
]

[project.scripts]
ptp-unregistered-cleaner = "ptp_unregistered_cleaner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ptp_unregistered_cleaner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
